# openclaw-workspace

./: .gitignore  AGENT_DEN_AUTOMATION.md  AGENT_DEN_INTEGRATION.md  AGENT_DEN_SPEC.md  AGENT_DEN_WORKFLOWS.md  GOOGLE_ADK_AGENTS.md  HEARTBEAT.md  IDENTITY.md  MISSION-CONTROL.md  TOOLS.md  agent_den_events.example.json  agent_den_memory.json  agent_den_policy.json  agent_den_runtime.json  groups.json  index.html
data/: tasks.json
dev-workflow/: README.md  SKILL.md  config.py  orchestrator.py
memory/: 2026-04-15.md
mission-control/scripts/: agent-den-coordinator.js  agent-den-engine.js  agent-den-event-adapter.js  data.js  main.js
mission-control/styles/: main.css
mood-journal-app/: PROJECT_PLAN.md
mood-journal-app/mobile/: app.json  package-lock.json  package.json
mood-journal-app/mobile/app/: _layout.tsx  onboarding.tsx
mood-journal-app/mobile/app/(tabs)/: _layout.tsx  index.tsx  insights.tsx  settings.tsx  support.tsx  two.tsx
mood-journal-app/mobile/components/: ExternalLink.tsx  useAppColors.ts
mood-journal-app/mobile/lib/: export.ts  journal-db.ts  mock-data.ts  notifications.ts
scripts/: approve-cli-device-repair.ps1  mc-update.py  rotate-openclaw-log.ps1  run-openclaw-log-rotate.cmd
the-backroom/: CMakeLists.txt  README.md  SPEC.md  database-setup.sql
the-backroom/Source/AIProcessing/: AIProcessor.cpp  AIProcessor.h
the-backroom/Source/AudioEngine/: AudioEngine.cpp  AudioEngine.h
the-backroom/Source/CloudService/: CloudService.cpp  CloudService.h
the-backroom/Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
workflow-output/: demo-web-app_design.md  demo-web-app_state.json  demo-web-app_stories.md  demo-web-app_tasks.md
